PW restrictions, FR14 & FR17
