# backend/src/routes/orderRoutes.js
@@ -1,11 +1,11 @@
 import express from 'express';
-import { createOrder, getOrders } from '../controllers/orderController.js';
+import { createOrder, getOrders, generateCheckoutOtp } from '../controllers/orderController.js';
 import { protect } from '../middlewares/authMiddleware.js';
 
 const router = express.Router();
 
-router.route('/')
-  .post(protect, createOrder)
-  .get(protect, getOrders);
+router.route('/').get(protect, getOrders).post(protect, createOrder);
+
+router.post('/generate-otp', protect, generateCheckoutOtp);
 
 export default router;
